--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,9 @@
 <h1>Raisa Pet Shop</h1>
 
+<p>{{image}}</p>
 <h5>Nama Aplikasi: </h5>
-<p>{{app}}</p> <!-- Ubah sesuai dengan npm kamu -->
+<p>{{app}}</p> 
 <h5>Nama: </h5>
-<p>{{name}}</p> <!-- Ubah sesuai dengan nama kamu -->
+<p>{{name}}</p> 
 <h5>Class: </h5>
-<p>{{class}}</p> <!-- Ubah sesuai dengan kelas kamu -->
+<p>{{class}}</p> 
