--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -5,6 +5,7 @@
 {% endblock meta %}
 
 {% block content %}
+<div class="container">
 <div class="login">
   <h1>Login</h1>
 
@@ -27,6 +28,7 @@
   </ul>
   {% endif %} Don't have an account yet?
   <a href="{% url 'main:register' %}">Register Now</a>
+</div>
 </div>
 
 {% endblock content %}
