--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -1,4 +1,5 @@
 body,html {
+    width: 100%;
     height: 100%;
     background-color: rgb(166, 154, 194);
 }
@@ -37,14 +38,19 @@ table {
     margin: auto;
 }
 .info-container {
+    border-radius: 8px;
     width: 100%;
     padding: 20px;
     background-color: #ddd2de;
+
 }
 
 .info-user {
     position: absolute;
     text-align: justify;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     top: 10px;
     left: 10px;
     font-size: 1em;
