--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -7,22 +7,15 @@
 {% block content %}
 <div class="min-h-screen flex items-center justify-center bg-purple-100 py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8 bg-white p-6 rounded-lg shadow-lg">
-    <div>
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-purple-900">
-        Create your account
-      </h2>
-    </div>
+    <h2 class="mt-6 text-center text-3xl font-extrabold text-purple-900">Create your account</h2>
     <form class="mt-8 space-y-6" method="POST">
       {% csrf_token %}
       <input type="hidden" name="remember" value="true">
       <div class="rounded-md shadow-sm -space-y-px">
         {% for field in form %}
           <div class="{% if not forloop.first %}mt-4{% endif %}">
-            <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-purple-900">
-              {{ field.label }}
-            </label>
+            <label for="{{ field.id_for_label }}" class="mb-2 font-semibold text-purple-900">{{ field.label }}</label>
             <div class="relative">
-              <!-- Menambahkan style langsung ke input -->
               <input type="{{ field.field.widget.type }}" name="{{ field.name }}" id="{{ field.id_for_label }}" value="{{ field.value|default:'' }}" class="block w-full border border-black rounded-md py-2 px-3 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-purple-500" {% if field.errors %} aria-invalid="true" aria-describedby="{{ field.id_for_label }}-error"{% endif %}>
               {% if field.errors %}
                 <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
@@ -61,9 +54,7 @@
     <div class="text-center mt-4">
       <p class="text-sm text-purple-700">
         Already have an account?
-        <a href="{% url 'main:login' %}" class="font-medium text-purple-500 hover:text-purple-700">
-          Login here
-        </a>
+        <a href="{% url 'main:login' %}" class="font-medium text-purple-500 hover:text-purple-700">Login here</a>
       </p>
     </div>
   </div>
