mengubah template create product

--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% include 'navbar.html' %}
 {% block content %}
-
 <div class="min-h-screen bg-purple-50 py-10">
   <div class="max-w-3xl mx-auto bg-purple-100 p-8 rounded-lg shadow-md">
     <h1 class="text-3xl font-bold text-purple-800 text-center mb-6">Add New Product</h1>
@@ -9,55 +8,28 @@
     <!-- Form for Adding New Product -->
     <form method="POST" enctype="multipart/form-data" class="space-y-4">
       {% csrf_token %}
+      
+      {% if form.errors %}
+          <div class="bg-red-100 border border-red-400 text-red-700 p-4 rounded">
+              <ul>
+                  {% for field, errors in form.errors.items %}
+                      <li>{{ field }}: {{ errors|join:", " }}</li>
+                  {% endfor %}
+              </ul>
+          </div>
+      {% endif %}
+
       <table class="w-full">
+        <!-- Your form fields here -->
+        <!-- Example for Name field -->
         <tr>
           <td class="pt-4">{{ form.name.label }}</td>
           <td class="pt-4">
             <input type="text" name="{{ form.name.name }}" value="{{ form.name.value }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.name.label }}">
           </td>
         </tr>
-        <tr>
-          <td class="pt-4">{{ form.flavour.label }}</td>
-          <td class="pt-4">
-            <input type="text" name="{{ form.flavour.name }}" value="{{ form.flavour.value }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.flavour.label }}">
-          </td>
-        </tr>
-        <tr>
-          <td class="pt-4">{{ form.price.label }}</td>
-          <td class="pt-4">
-            <input type="number" name="{{ form.price.name }}" value="{{ form.price.value }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.price.label }}">
-          </td>
-        </tr>
-        <tr>
-          <td class="pt-4">{{ form.product_image.label }}</td>
-          <td class="pt-4">
-            <input type="file" name="{{ form.product_image.name }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50">
-          </td>
-        </tr>
-        <tr>
-          <td class="pt-4">{{ form.description.label }}</td>
-          <td class="pt-4">
-            <textarea name="{{ form.description.name }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.description.label }}">{{ form.description.value }}</textarea>
-          </td>
-        </tr>
-        <tr>
-          <td class="pt-4">{{ form.netto.label }}</td>
-          <td class="pt-4">
-            <input type="number" name="{{ form.netto.name }}" value="{{ form.netto.value }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.netto.label }}">
-          </td>
-        </tr>
-        <tr>
-          <td class="pt-4">{{ form.category.label }}</td>
-          <td class="pt-4">
-            <input type="text" name="{{ form.category.name }}" value="{{ form.category.value }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.category.label }}">
-          </td>
-        </tr>
-        <tr>
-          <td class="pt-4">{{ form.stock.label }}</td>
-          <td class="pt-4">
-            <input type="number" name="{{ form.stock.name }}" value="{{ form.stock.value }}" class="border border-purple-300 rounded-lg p-2 w-full bg-purple-50" placeholder="{{ form.stock.label }}">
-          </td>
-        </tr>
+        <!-- Continue with the rest of your form fields... -->
+        
         <tr>
           <td class="pt-4"></td>
           <td class="pt-4">
@@ -73,5 +45,4 @@
     </form>
   </div>
 </div>
-
 {% endblock %}
