--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,28 +1,20 @@
 {% extends 'base.html' %}
-{% load static %}
-{% include 'navbar.html' %}
 {% block content %}
+{% include 'navbar.html' %}
+<h1>Add New Product</h1>
 
-<div class="min-h-screen bg-purple-50 py-10">
-  <div class="max-w-3xl mx-auto bg-purple-100 p-8 rounded-lg shadow-md">
-    <h1 class="text-3xl font-bold text-purple-800 text-center mb-6">Add New Product</h1>
-
-    <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %}
-      <table class="w-full">
-        {{ form.as_table }}
-        <tr>
-          <td></td>
-          <td>
-            <div class="flex justify-between mt-4">
-              <input type="submit" value="Add Product" class="py-2 px-6 bg-purple-600 text-white rounded-lg cursor-pointer hover:bg-purple-700 transition-all duration-300" />
-              <input type="reset" value="Reset Form" class="py-2 px-6 bg-gray-300 text-gray-700 rounded-lg cursor-pointer hover:bg-gray-400 transition-all duration-300" />
-            </div>
-          </td>
-        </tr>
-      </table>
-    </form>
-  </div>
-</div>
+<form method="POST" enctype="multipart/form-data">
+  {% csrf_token %}
+  <table>
+    {{ form.as_table }}
+    <tr>
+      <td></td>
+      <td>
+        <input type="submit" value="Add Product" />
+        <input type="reset" value="Reset Form" /> <!-- Tombol Reset -->
+      </td>
+    </tr>
+  </table>
+</form>
 
 {% endblock %}
