--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% include 'navbar.html' %}
+<div class="min-h-screen bg-purple-50 py-10"></div>
 <h1>Add New Product</h1>
 
 <form method="POST" enctype="multipart/form-data">
@@ -16,5 +17,6 @@
     </tr>
   </table>
 </form>
+</div>
 
 {% endblock %}
